--- a/PROO (2).ipynb
+++ b/PROO (2).ipynb
@@ -2861,45 +2861,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 55,
-   "id": "352b7618",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 62518 entries, 15 to 318533\n",
-      "Data columns (total 17 columns):\n",
-      " #   Column             Non-Null Count  Dtype  \n",
-      "---  ------             --------------  -----  \n",
-      " 0   HeartDisease       62518 non-null  int64  \n",
-      " 1   BMI                62518 non-null  float64\n",
-      " 2   Smoking            62518 non-null  int64  \n",
-      " 3   Stroke             62518 non-null  int64  \n",
-      " 4   PhysicalHealth     62518 non-null  float64\n",
-      " 5   MentalHealth       62518 non-null  float64\n",
-      " 6   DiffWalking        62518 non-null  int64  \n",
-      " 7   Sex                62518 non-null  int64  \n",
-      " 8   AgeCategory        62518 non-null  int64  \n",
-      " 9   Race               62518 non-null  int64  \n",
-      " 10  Diabetic           62518 non-null  int64  \n",
-      " 11  PhysicalActivity   62518 non-null  int64  \n",
-      " 12  GenHealth          62518 non-null  int64  \n",
-      " 13  SleepTime          62518 non-null  float64\n",
-      " 14  KidneyDisease      62518 non-null  int64  \n",
-      " 15  HealthStrain       62518 non-null  float64\n",
-      " 16  HealthStrainLevel  62518 non-null  int64  \n",
-      "dtypes: float64(5), int64(12)\n",
-      "memory usage: 8.6 MB\n"
-     ]
-    }
-   ]
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "fd6b7e45",
    "metadata": {},
@@ -2937,6 +2898,7 @@
     "smote = SMOTE(random_state=42)\n",
     "X_train_res, y_train_res = smote.fit_resample(X_train, y_train)\n",
     "\n",
+    "print(\"After SMOTE, training class distribution:\")\n",
     "print(y_train_res.value_counts())\n",
     "\n",
     "\n",
